<resources>
    <string name="app_name">WeFit</string>
    <string name="facebook_app_id">152858705454431</string>
    <string name="fb_login_protocol_scheme">fb152858705454431</string>

    <string name="server_client_id">506662140461-frgoq1ifllblne9bhejqeee7f6djbqnl.apps.googleusercontent.com</string>

    <string name="connection_failure_msg">Sorry, please connect to the Internet</string>
    <string name="loging_fb_btn">Login with Facebook</string>
    <string name="event_description_top_label">Event description</string>
    <string name="postedby_text">posted by</string>
    <string name="postedby_label" />

    <string name="event_description_label">Event Description</string>
    <string name="no_events_around_label">Sorry, it seems that there are no events around!</string>
    <string name="add_event_suggestion_label">Press + to add one</string>
    <string name="add_to_calendar_label">add to calendar</string>
    <string name="view_on_map_label">view on map</string>
    <string name="posted_on_label">posted on</string>
    <string name="join_event_label_btn">Join event</string>
    <string name="abandon_event_label_btn">Abandon event</string>
    <string name="edit_description_label_btn">Edit description</string>
    <string name="weather">Weather</string>
    <string name="event_image">Event image</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="right_button">Right button</string>
    <string name="landmark_icon_descr">Landmark icon</string>
    <string name="loading_popup_message_spinner">Loading. Please wait…</string>
    <string name="error_message_download_resources">Something went wrong while retrieving the data! Sorry…</string>
    <string name="ok_button">OK</string>
    <string name="weather_error_toast_label">Ouch, no weather infos available</string>
    <string name="accept_edit_label_btn">Accept edit</string>
    <string name="description_type_modify_hint">Type a description here!</string>
    <string name="user_description_top_label">WeFit User</string>
    <string name="report_email_address">gioacchino.castorio@ucdconnect.ie</string>
    <string name="email_report_object">User report</string>
    <string name="send_email_picker_title">Send mail…</string>
    <string name="toat_email_user_agent_not_installed">There is no email client installed!</string>
    <string name="email_body_report_separator">would like to report the user</string>
    <string name="biography_label">Biography</string>
    <string name="birth_date_label">Birth date:</string>
    <string name="attendees_list_label">Attendees</string>
    <string name="new_event_page_label">New event</string>
    <string name="go_ahead_button">Further details</string>
    <string name="create_event_button_label">Create event!</string>
    <string name="one_more_step_button_label">One more step</string>
    <string name="form_not_completely_filled_popup">Hey, you\'ve forgotten some parameters</string>
    <string name="private_event_label">Private event</string>
    <string name="public_event_label">Public event</string>
    <string name="category_selection_label">Select a category for your event!</string>
    <string name="select_image_error_toast">Impossible to load the selected image</string>
    <string name="description_input_label">Type a description for your new event!</string>
    <string name="type_here_hint">Type here!</string>
    <string name="your_profile_title">Your profile</string>
    <string name="your_events_title">Your events</string>
    <string name="alert_no_age">Hey, tell us your birthdate!</string>
    <string name="confirm">Confirm</string>
    <string name="discard">Discard</string>
    <string name="bio_forgot_toast">Hey, you forgot your bio!</string>
    <string name="location_permission_notallowed_toast">Hey, we respect your privacy. We selected Dublin as your location.</string>
    <string name="no_internet_popup_label">No internet connection!</string>
    <string name="confirmed_label">confirmed</string>
    <string name="not_confirmed_label">NOT confirmed</string>
    <string name="recconnecting_request">No internet connection. Once reconnected it could take a while to recontact the server</string>
    <string name="user_default_image">iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAIAAACx0UUtAAAAA3NCSVQICAjb4U/gAAAMWklEQVR4 nO2d61PaQBeHt+8pFRFFidYbtR0Zq44d//+/g9EpDKKjRShyCbdg2nT1/bBvGd8q9yRnc/Y8H9vY /gwPZy/Z7L57fn4WDKMx/8EOwDATYEcZ3WFHGd1hRxndYUcZ3WFHGd1hRxndYUcZ3WFHGd1hRxnd YUcZ3WFHGd1hRxndYUcZ3WFHGd1hRxndYUcZ3WFHGd1hRxndYUcZ3WFHGd1hRxndeY8dgAKu60op hRBSSgAQQgAAAMRiMexoFGBHZ8ZxnH6/3+/3HcdxXXf8xfF4fGlpaXV1NZlMrq2thZOQGO94D4hp 8Dyv1Wq12+1Op6P+RNXLKVFVVgiRSCTS6XQ6nY7H4/6nJAo7OgHbtn/+/Nnr9cSMXo5C+RqPxzc3 N/f29hb/B8nDjo6kUqlUq9VhF9N3lKyWZR0cHHDPdQzs6BtUKpVyuSx8KpwTkVKyqWNgR/8P27av r6+Dq51jkFJmMhlu/V/Djv4Pz/Ourq56vV74dg5R342joyOeAXgJOyqEELZtF4tFRDtfopr+bDaL HUQX2FFRKpWazaYmgiqklPF4/PT0lHuogh29uLgYDAZaCTpESnlycsLtvrmOep6Xy+WwU0xASpnN Zi3Lwg6CiaGOuq6by+X0LJ//wON9E9c9RUhQIQQAlMvlSqWCHQQN4xxVTXxUBFUoTWu1GnYQHMxy NIqCKgDg9vbWtm3sIAiY5ej379+xI8wPABSLRcdxsIOEjUGOFgqFics9NQcA8vk8doqwMcXRSqXS 6XSi2Mq/5uLiAjtCqBjhqOM45XKZhqBCiMFgYNQw3whH8/k8GUHF32G+OR1T+o6WSqXhqxpkMKpj StxRx3F0Wy/iF1JKQ1p84o6WSiWSgoq/Lb7nedhBAoeyo7VaLeqTTeMBgOvra+wUgUPZ0dvbW6pF dEin0yE/eCLrqCF9NQC4ubnBThEsZB2lNCE6nsFgQLuU0nTUkCKqAIC7uzvsFAFC09FqtWpIEVX0 ej3Co0OCjjabTXqT9hO5v7/HjhAUBB01rYgKIQCg2WxipwgKao66rjsYDLBT4EBVU2qOtlot7Ag4 AMDDwwN2ikCg5qiBDf0QtQElPUg56jiOgaOll5Bs7kk5Otxk2UwAoNFoYKfwH1KONhoNYxt6Bclv KR1HPc8jPI89PfSei9JxtNvtYkfQAnqllI6j7Xbb8IZeCAEA7Ki+0Gvj5oPeDBQdR7kzOoTYCyRE HOUi+pJ+v48dwU+IOMpF9CWPj4/YEfyEiKO/fv3CjqALAMCO6gjumTW6wY7qCNfRlxC7G0Qc5f7o S4gtrCHiKPMPlKafKDhK6fPwC0qllIKjlD4Pv6B0T9hRmlC6J+woozsUHGVeQ+l7y44yusOOMrrD jtKE0pNhCo5S+jz8gtI9YUdpQumesKM0oXRPKDgai8WwI2gHpXtCwVFBq2ww/0DEUUplY3Hi8Th2 BD8h4ujS0hJ2BI0gdjeIOLq6ukrp6d+CvH//HjuCnxBxlPujQ6SUy8vL2Cn8hIijxD6VBSF2N9hR ghC7G0Qc5XH9S3hcrynEPpi5odc1p+PoysoKdgQtSCQS2BF8ho6jy8vLPP0kpfzw4QN2Cp8h5Sh2 BC1YX1/HjuAz7Cg16PXL6ThK77OZD3r9cjqOCorDhVkh+UUl5SgPm+gVUUHMUXrDhZmQUpK8A6Qc XVtbw46ADNdR3YnFYvSesswE90cjAMnGbkpSqRR2hECg5mgymTRz2ES1MyroOUq1lkwD1d+dmqPx eNzMLikAkOyMCnqOClO7pIR/a4KOptNp07qkUsp0Oo2dIigIOrqxsYEdAQHCvzVBR4V5D+6pjpYU NB3d2toyp7mXUm5ubmKnCBCajhLunL2JZVnYEQKEpqOxWMyc5p62oIKqo0KI3d1dE5p7KeXW1hZ2 imAh6yj56qIAAPKrvcg6KgzQVEq5u7uLnSJwKDu6s7NDvrnf29vDjhA4lB1dWVmh+ghbQb6hUFB2 VAixv79PtZRKKff397FThAFxRy3LoroMKpVK0W4lhhB3VAiRyWTolVIp5efPn7FThAR9R7e3t+mV UnOKqDDBUSHEly9fKJVSKeXh4SF2ivAwwlHLsshUHSmlZVlG7QlshKOCUCkFgGw2i50iVExxdG1t jcAiS9NaeYUpjgohjo+Po15KU6kU4fX2ozDIUSFENpuNtKbHx8fYERAwy1HLsizLiqKmUsqjoyPs FDiY5agQIpvNRm66VEqZyWTIr8EbhXGOCiHOz88jVEqllKlUyoT1TaMw0dFYLHZ2dhYVTROJhJnd 0CEmOiqEWFlZOTo60l/TWCz27ds37BTIGOqoEGJjY0PzYb6U8tOnT9gp8DHXUSGEZVmavz5q4Gzo a4x2VOh9qhOBB2O+wI5qehQJ4T1vZ4Ud5TqqO6Y7qvMJsGTWEy4IO6qpoyzoENMd1XaxMMmTlubD dEf1RM9hHBbsqKboPJgLGXZUUyK3OCs42FFGd9hRTeEu6RDTHXVdFzsCMwHTHf39+zd2hDcAgMfH R+wUumC6o9qq4DgOdgRdMN3Rfr+v5wiaOyFDTHe03W5jRxhJt9vFjqAFRjvquq62w2cAqNfr2Cm0 wGhHW60WdoRxNJtN7AhaYLSj1WpVz87okFqthh0BH3MdrdVq2jb0CgAol8vYKfAx19Fyuax5ERVC SClLpRJ2CmQMdbRQKGBHmAoAaDabhndMTXS0Uql0Oh3sFNMCAKVSybZt7CBovHt+fsbOECqlUqnZ bOrfyv+DOkhke3sbOwgCZjlaKBQ6nU7kBFWonfBN22hcGOVoLpdzXTeigiqklPF4/Pz8HDtIqBjh qOu6l5eX2Cn85OTkxJyX8ug7att2sViMdPl8jZQym80acqYtcUcrlUok5kHnwJzuKWVHLy4uBoMB SUEVqnt6enqq7S4BvkDT0W63WywWsVOEhDrOgfAukAQdjegM6CLQbvdJOeo4Tj6fl1IaJahC/dZn Z2f0Noqi46iB5fM1JAsqBUfV4F3w3h5CiL8F9fDwkEwPNdqO1mq1crlsZuM+HillIpE4ODggcPJY JB31PK9er1erVbZzPMrU/f39SNfUiDna7Xar1apaWcd2Ton6Ju/u7m5tbUVxJjUajna73Xq9rpb6 sprzoV6MWV1d/fjxY7QeourrqOd5rVar3W5z1fQXJWsikUin06lUSv+1KXo56nlet9ttt9vtdlvd SlYzOIavHKZSqfX19WQyqaevWjiqmnLHcdQGMuxl+Ax9VfV1eXk5mUxq0nnFdLTZbDYajeGrRaym Jgx9BYD19fV0Oo07LYDgqG3bDw8P3MuMCi/7r+l0OvxnreE5ypOaUUfJGo/HNzc3w5zGCsNRx3HK 5TIXTjIMp7F2dnZC6AYE62i32727u6O90Nhkhk8H9vb2gvtfgnLUdd2bm5ter8d2kkeV1UwmE5Cp gTjKy+QMRJkaxEYVPjtq2/b19TWPioxFvWL19etXH4f/fjrK5ZNRSCl9bPr9cdTzvFwux+WTGeLj O6s+ONrtdvP5PNvJvEZKeXZ2tuAygEUdbTabpVKJBWVGsfir1QvtP8qCMhMBgGKxuMj+qfM7yoIy U6I0nfu4qTkddRyHBWWmBwDy+fx8h/fN46jneZeXlywoMxMAMN8Om/M4WigUWFBmPuY4LWNmRyuV ymAwmPWnGEbR6XRmPSZlNkdd16W6nScTDuqYlJl+ZDZHr66uWFBmcWbSdAZHbdvmVp5ZHHUw2vRj /Bkc/fHjBxdRxhcA4Pb2dsqLp3XUtu35JrcY5k06nY7nedNcOa2j9/f3XEQZf7m7u5vmsqkcdV2X e6KMv6he6TRXTuXo/f39YnkY5m2m0XQqR3l1PRMEAPDw8DDxssmOmnwqNRM0vV5v4shpsqOtVouL KBMcrVZr/AWTHZ316SrDTA8A1Ov18ddMcHTudakMMyUTp4wmODrRcYZZnPFt9QRH2+02d0aZQAGA drs95oJxjnqeN9wulWGCY/46yp1RJjQcxxn1V+McbTQa3NAz4TDccv414xwd82MM4yMA0Gg0Rv3t SEfH1F6G8R3XdUc9cBrpKBdRJmRGPXAa6Sh3RpkwGfPA6W1HPc/jVfdMyAwGgzeb+7cdnfiYn2GC 4E3x3na0Xq9zQ8+EDADUarXXf/6Go57n8ZshDAqu677uZL5/fV2/34/W+eZT8ufPH+wIc/L09BTO f4T+6Pvp6anVav2zkb4W5y4zzBj+C3xEc3qc1fDkAAAAAElFTkSuQmCC</string>
    <string name="user_bio_default">Just registered!</string>
    <string name="firebase_user_store_name">test_users</string>
    <string name="firebase_event_store_name">test_event_store</string>
    <string name="openweathermap_key">3f305e12883b15929de1b1b4a5c0c61d</string>
    <string name="contact_email_object">A WeFit user want to contact you</string>
    <string name="email_content_type">text/plain</string>
    <string name="need_for_confirmation_popup">Remember that the publisher has to confirm you. Be patient!</string>
    <string name="wefit_logo">WeFit Logo</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="facebook_cancel_string">Please, don\'t be shy</string>
    <string name="facebook_login_error_string">Ops, facebook is nuts</string>
    <string name="google_login_error_popup">Gosh, something went wrong!</string>
    <string name="login_firebase_error">Gosh, the WeFit server seems to have an issue!</string>
    <string name="email_not_confirmed_popup">Hey, email not confirmed!</string>
    <string name="loading_text">Loading. Please wait…</string>
    <string name="message_mail_user">Hi %1$s, I\'m %1$s from WeFit</string>
    <string name="mail_uri_protocol">mailto:</string>
    <string name="android_map_request_name">com.google.android.apps.maps</string>
    <string name="calendar_request_name">vnd.android.cursor.item/event</string>
    <string name="calendar_not_intalled_toast">There is no calendar in the system</string>
    <string name="no_map_application_toast">There is no map application</string>
    <string name="no_internet_no_forecast">Sorry, no internet, no forecast</string>
    <string name="action_attendee_popup">Action on attendee</string>
    <string name="admin_attendee_action_request">What do you want to do?</string>
    <string name="reject">Reject</string>
    <string name="abandon_action_popup_title">Abandon the event</string>
    <string name="abandon_popup_text">Are you sure you want to abandon this event?</string>
    <string name="private_event_list_label">private</string>
    <string name="admin_label">admin</string>
    <string name="date_format_pattern">MMM</string>
    <string name="published_on_lagel">Published on:</string>
    <string name="gps_not_available">Sorry, your position is not immediately available!</string>

</resources>
