<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--TopBar-->
    <RelativeLayout
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/event_description_backbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/backbutton_margin_left"
            android:layout_marginStart="@dimen/backbutton_margin_left"
            android:src="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/event_description_label"
            android:textColor="@color/white"
            android:textSize="@dimen/text_label_font_size" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topPanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/event_main_img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/event_image"
                android:scaleType="centerCrop"
                android:src="@drawable/running_placeholder" />

            <!-- main body -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- nameitle -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">


                    <!-- nameitle and posted on -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/event_title_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp" />

                        <!-- event operations buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="4dp"
                                android:layout_marginRight="4dp"
                                android:text="@string/posted_on_label" />

                            <TextView
                                android:id="@+id/event_date_posted"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textStyle="bold" />
                        </LinearLayout>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/weather_shower_pic"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/weather" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <Button
                        android:id="@+id/join_event_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_positive_event_button"
                        android:text="@string/join_event_label_btn"
                        android:textColor="@color/positive_event_green"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/abandon_event_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_abandon_event_button"
                        android:text="@string/abandon_event_label_btn"
                        android:textColor="@color/alert_red"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/modify_event_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_primary"
                        android:text="@string/edit_description_label_btn"
                        android:textColor="@color/colorPrimary"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/accept_modification_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_positive_event_button"
                        android:text="@string/accept_edit_label_btn"
                        android:textColor="@color/positive_event_green"
                        tools:ignore="ButtonStyle" />


                </LinearLayout>

                <!-- main description -->
                <EditText
                    android:id="@+id/event_description_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:enabled="false"
                    android:hint="@string/description_type_modify_hint"
                    android:inputType="textMultiLine"
                    android:paddingBottom="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="0dp"
                    android:textColor="@drawable/textdescription_selector" />

                <!-- date and hour -->
                <LinearLayout
                    android:id="@+id/calendar_add_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#E5E5E5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/calendar_icon"
                        android:src="@drawable/calendar_ico" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/event_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="150dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/event_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="150dp"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/add_to_calendar_label"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:contentDescription="@string/right_button"
                            android:src="@drawable/forward_icon" />


                    </LinearLayout>


                </LinearLayout>

                <!-- event location -->
                <LinearLayout
                    android:id="@+id/open_map_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="#E5E5E5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/landmark_icon_descr"
                        android:src="@drawable/ic_landmark" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/place_name_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="160dp"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/city_name_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:maxWidth="160dp"
                            android:textSize="11sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="right"
                        android:orientation="horizontal"
                        tools:ignore="RtlHardcoded,UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/view_on_map_label"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:contentDescription="@string/right_button"
                            android:src="@drawable/forward_icon" />


                    </LinearLayout>

                </LinearLayout>

                <!-- attendees -->
                <LinearLayout
                    android:id="@+id/attendees_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <!-- title -->
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/attendees_list_label"
                        android:textSize="17sp" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>

